<resources>
    <string name="app_name">Study Demo</string>
    <string name="reflect_demo">反射demo</string>
    <string name="annotation_demo">注解demo</string>
    <string name="custom_view_demo">自定义View Demo</string>
    <string name="scroll_view_demo">滚动View Demo</string>
    <string name="thread_demo">Thread Demo</string>
    <string name="recyclerview_demo">RecyclerView Demo</string>
</resources>
