<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/reflect_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reflect_demo" />

    <Button
        android:id="@+id/annotation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reflect_btn"
        android:text="@string/annotation_demo" />

    <Button
        android:id="@+id/custom_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/annotation_btn"
        android:text="@string/custom_view_demo" />

    <Button
        android:id="@+id/scroll_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_view_btn"
        android:text="@string/scroll_view_demo" />

    <Button
        android:id="@+id/thread_demo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view_btn"
        android:text="@string/thread_demo" />

</RelativeLayout>
